assignment 3 and 4 done

--- a/assignment 3.ipynb
+++ b/assignment 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6026681e",
+   "id": "1fa0aeff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ecf4e4d0",
+   "id": "dfcbf514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c5e082f4",
+   "id": "27004562",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1210aa77",
+   "id": "2359029d",
    "metadata": {},
    "outputs": [
     {
@@ -71,17 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3d60d7d6",
+   "execution_count": 12,
+   "id": "846148f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "375.0"
+       "125.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +92,14 @@
     "\n",
     "b=10\n",
     "h=25\n",
-    "area=1.5*b*h # formula to find the area of triangle\n",
+    "area=0.5*b*h # formula to find the area of triangle\n",
     "area  # result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "553a5b59",
+   "execution_count": 13,
+   "id": "a53605b3",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "60000.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,14 +119,14 @@
     "p=100\n",
     "t=20\n",
     "r=3000\n",
-    "si=p*t*r/100 # formula for simple interest \n",
+    "si=(p*t*r)/100 # formula for simple interest \n",
     "si # result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9dde9cb2",
+   "id": "728f575a",
    "metadata": {},
    "outputs": [
     {
@@ -147,14 +147,14 @@
     "r= 24 # annual interest rate\n",
     "n=2 # no of time that interest is compunded per year\n",
     "t=3 # no of years the money is invested for\n",
-    "A=p*(1+r/n)*(n*t) # formula for compund intrest \n",
-    "A # Final amount (including principal and interest)"
+    "CI=p*(1+r/n)**(n*t) # formula for compund intrest \n",
+    "CI # Final amount (including principal and interest)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f89aba",
+   "id": "630b2965",
    "metadata": {},
    "outputs": [],
    "source": []
