--- a/assignment 5.ipynb
+++ b/assignment 5.ipynb
@@ -2,101 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9598035c",
+   "execution_count": 15,
+   "id": "84b00d3d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the stringhello\n"
+      "enter the string:hello python\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'HELLO'"
+       "'HELLO PYTHON'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s= input('enter the string')\n",
+    "s= input('enter the string:')\n",
     "s=s.upper()\n",
     "s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "82cacc46",
+   "execution_count": 16,
+   "id": "a9a1c4c3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter the stringmy name is keonics\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'my-name-is-keonics'"
+       "'HELLO-PYTHON'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s= input('enter the string')\n",
+    "\n",
     "s=s.replace (' ','-')\n",
     "s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e513b76d",
+   "execution_count": 17,
+   "id": "078f5b44",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter the stringhello this is your friend\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "25"
+       "12"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s= input('enter the string')\n",
+    "\n",
     "s=len(s)\n",
     "s"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "0aa20601",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter first number1\n",
+      "enter second number2.3\n",
+      "3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input('enter first number'))\n",
+    "b=float(input('enter second number'))\n",
+    "c=a+b\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8fd421e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2cd4a00c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8370763f",
+   "id": "0b164fe3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "|"
+   ]
   }
  ],
  "metadata": {
