--- a/assignment 6.ipynb
+++ b/assignment 6.ipynb
@@ -66,7 +66,7 @@
    "id": "b844b125",
    "metadata": {},
    "source": [
-    "## String Manipulation:\n"
+    "## String Manipulation:"
    ]
   },
   {
@@ -466,8 +466,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "659f607c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:5\n",
+      "5 is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "# task to find the given number is even or odd using if-else.\n",
+    "a=int(input(\"a:\"))\n",
+    "if a%2: \n",
+    "    print(\"{} is odd\".format(a))\n",
+    "else : \n",
+    "    print(\"{} is even\".format(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "693e2742",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the first number: 10\n",
+      "Enter the second number: 20\n",
+      "Enter the third number: 30\n",
+      "The largest number is 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# task to find biggest number among 3 given number\n",
+    "# Input three numbers\n",
+    "a = input(\"Enter the first number: \")\n",
+    "b = input(\"Enter the second number: \")\n",
+    "c = input(\"Enter the third number: \")\n",
+    "\n",
+    "# Compare the numbers to find the largest\n",
+    "if a >= b and b >= c:\n",
+    "    largest = a\n",
+    "elif b >= a and b >= c:\n",
+    "    largest = b\n",
+    "else:\n",
+    "    largest = c\n",
+    "\n",
+    "# Print the largest number\n",
+    "print(\"The largest number is\",largest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6985ab66",
    "metadata": {},
    "outputs": [],
    "source": []
