--- a/assignment 6.ipynb
+++ b/assignment 6.ipynb
@@ -286,13 +286,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "894d265e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a decimal number: 521.25001\n",
+      "Formatted number: 521.25\n"
+     ]
+    }
+   ],
    "source": [
     "# Design a program to format a decimal number to display exactly two decimal places.\n",
-    "\n"
+    "# Input decimal number\n",
+    "decimal_number = float(input(\"Enter a decimal number: \"))\n",
+    "\n",
+    "# Format the number to display exactly two decimal places\n",
+    "formatted_number = \"{:.2f}\".format(decimal_number)\n",
+    "\n",
+    "# Print the formatted number\n",
+    "print(\"Formatted number:\", formatted_number)\n"
    ]
   },
   {
@@ -338,12 +354,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "f3850bf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter any string: mom\n",
+      "given string is a palindrome\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write a program to check if a given string is a palindrome"
+    "# Write a program to check if a given string is a palindrome\n",
+    "x1 = input(\"Enter any string: \")\n",
+    "x2 = x1[::-1]\n",
+    "if x1==x2:\n",
+    "  print(\"given string is a palindrome\")\n",
+    "else:\n",
+    "  print(\"given string is not a palindrome\")"
    ]
   },
   {
@@ -353,17 +384,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Design a program to validate if a given string is a valid email address\n"
+    "# Design a program to validate if a given string is a valid email address"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "a55917e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a program to validate if a given string is a valid phone number."
+    "# Create a program to validate if a given string is a valid phone number.\n"
    ]
   },
   {
