assignment 7 and new one done

--- a/assignment 7.ipynb
+++ b/assignment 7.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number: 11\n",
-      "11 is a prime number.\n"
+      "Enter a number: 34\n",
+      "34 is not a prime number.\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f7f359c0",
    "metadata": {},
    "outputs": [
@@ -91,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number: 7\n",
-      "The factorial of 7 is 5040\n"
+      "Enter a number: 5\n",
+      "The factorial of 5 is 120\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "fbba9fee",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your current age in years: 21\n",
+      "Enter your current age: 21\n",
       "Your age after 5000 days will be approximately 34.70 years.\n"
      ]
     }
@@ -259,7 +259,7 @@
    "source": [
     "# task\n",
     "# Input your current age in years\n",
-    "current_age = float(input(\"Enter your current age in years: \"))\n",
+    "current_age = float(input(\"Enter your current age: \"))\n",
     "\n",
     "# Calculate your age after 5000 days\n",
     "age_after_5000_days = current_age + 5000 / 365\n",
