--- a/assignment 9.ipynb
+++ b/assignment 9.ipynb
@@ -602,43 +602,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "8f560250",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class '_csv.reader'>\n",
-      "2\n",
-      "sl no: 0\n",
-      "Book Name: The Woman in Me\n",
-      "Review Title: Unbelievably impressive. Her torn life on paper.\n",
-      "reviewer: Murderess Marbie\n",
-      "reviewer rating: 4\n",
-      "review description: I'm only a third way in. Shipped lightening fast.The print quality of the book is very good. I like the rose and the purple foil, they captured her taste here and will look bomb on my bookshelf.As for the writing it's good. Amazing, no. But they painted an incredible picture of her life. Much better writing than I thought to be honest. I was expecting more scattered blurbs throughout the book but the way it's presented does honor her experience, and sounds like her up to an extent. Now, I do think the ghost writer went verbose in some areas that were unnecessary which derailed her voice in my head but I imagine getting the whole picture would be difficult.I was hoping for a thicker book as she's been through a lot. So I am a bit disappointed at that but nevertheless it's an interesting read thus far.As for Britney's life story. I have to say they were smart in starting with her lineage and she didn't hold back keeping her family accountable from the gate. Good on her for having conviction.I suddenly found myself understanding little quirks, connecting the dots, certain things would suddenly click in my head. For example her British accent and her relationship with a lynchpin matriarch elder.Very cool build up. Laying the ground work for her future decisions by presenting us with complex childhood family dynamics really has me understanding her choices and quirks much better than I ever realized I needed to be deep in thought of.Sometimes we judge from a place of pity or outsider perspective instead of compassion. Now I see the soft gentle feminine side of her mindset that we knew when she was younger start to peek through the pages. It's that sweet part of her soul that she doesn't show much nowadays, for good reason of course as she's been deeply hurt and damaged by other's greed, but that delicate nature is part of why most of us were charmed by her. I hope she finds her way back one day.She's been through a lot and I found myself relating to things she'd been through, and feeling deeply saddened by her sense of insecurity in childhood. Her insights correlate along with many of my own life experiences and traumas. I was taken aback by her growth in reflection, as one would believe anger would be the easy way to portray her story, not the case here, it's her appreciation for her past that has earned my deep respect beyond what I thought I had possessed prior to reading.Her story with her brother was touching and softened my distain for his participation in the matter of handling her affairs. Although I hope he is held accountable someday. It shows how loving and innocent she was and how grave a loss she has suffered, for it is those who are selfless that don't speak up only to suffer the most.Such a contrast to the presentation of her character in the media. Thus far this book is an excellent read!------ To be Continued* I'm looking forward to reading through this book in it's entirety and will update when I'm done. One star for the writing not sounding like her in some places. I will change accordingly.\n",
-      "\n",
-      "3\n",
-      "sl no: 1\n",
-      "Book Name: The Woman in Me\n",
-      "Review Title: What a heartbreaking story\n",
-      "reviewer: L J\n",
-      "reviewer rating: 5\n",
-      "review description: \"There have been so many times when I was scared to speak up because I was afraid somebody would think I was crazy. But I've learned that lesson now, the hard way. You have to speak the thing that you're feeling, even if it scares you. You have to tell your story. You have to raise your voice.\"What a heartbreaking story. Whatever you feel about Britney this memoir makes you understand and have empathy for all the things that have made headlines in her life. It took me a little bit to get into it because though people believed this was going to be ghostwritten, I believe the editors tried to keep it raw and in her voice so it does jump around a little bit and the flow can be off, but it feels authentically Britney. I got to a point where I couldn't put it down...and then there were parts I had to put it down because it was very difficult to read what she went through.I don't think I will look at any of her past interviews or performances the same and I wish her the best.In speaking of when her family forced her into a mental health facility after refusing to do a second tour in Vegas and wanting to change up dance moves in a performance:\"God must have been with me through that period of time. Three months into my confinement, I started to believe that my little heart, whatever made me Britney, was no longer inside my body anymore. Something bigger must have been carrying me through, because it was too much for me to bear alone. I look at the fact that I survived and I think, \"that wasn't me; that was God.\"\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'charmap' codec can't decode byte 0x8f in position 1168: character maps to <undefined>",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:/Users/Asus/Desktop/customer reviews.csv'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[62], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m data\u001b[38;5;241m=\u001b[39mcsv\u001b[38;5;241m.\u001b[39mreader(fd)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(data))\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[0;32m      7\u001b[0m     c\u001b[38;5;241m=\u001b[39mc\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m3\u001b[39m:\n",
-      "File \u001b[1;32m~\\anaconda3\\Lib\\encodings\\cp1252.py:23\u001b[0m, in \u001b[0;36mIncrementalDecoder.decode\u001b[1;34m(self, input, final)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, final\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m---> 23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m codecs\u001b[38;5;241m.\u001b[39mcharmap_decode(\u001b[38;5;28minput\u001b[39m,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merrors,decoding_table)[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'charmap' codec can't decode byte 0x8f in position 1168: character maps to <undefined>"
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcsv\u001b[39;00m\n\u001b[0;32m      2\u001b[0m c\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/Asus/Desktop/customer reviews.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m,mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fd:\n\u001b[0;32m      4\u001b[0m     data\u001b[38;5;241m=\u001b[39mcsv\u001b[38;5;241m.\u001b[39mreader(fd)\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(data))\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    284\u001b[0m     )\n\u001b[1;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Users/Asus/Desktop/customer reviews.csv'"
      ]
     }
    ],
